--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,49 @@
 {
     "name": "My Finance Budget Tracker",
     "short_name": "MyFinTracker",
-    "icons": [{
-      "src": "path.resolve('./icons/icon-512x512.png')",
-      "sizes": "[72, 96, 128, 144, 152, 192, 384, 512]"   
-    }],
+    "icons": [
+      {
+        "src": "./icons/icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      },
+      {
+        "src": "./icons/icon-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+  
+      {
+        "src": "./icons/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "./icons/icon-152x152.png",
+        "sizes": "152x152",
+        "type": "image/png"
+      },
+      {
+        "src": "./icons/icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      },
+      {
+        "src": "./icons/icon-128x128.png",
+        "sizes": "128x128",
+        "type": "image/png"
+      },
+      {
+        "src": "./icons/icon-96x96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
+        "src": "./icons/icon-72x72.png",
+        "sizes": "72x72",
+        "type": "image/png"
+      }
+    ],
     "theme_color": "#ffffff",
     "background_color": "#01597b",
     "start_url": "./index.html",
